# embedding-service

./: .gitignore  pyproject.toml  start_embedding_service.bat  start_llm_service.bat
scripts/: invoke_embedding_service_test.py  invoke_llm_service_test.py  invoke_test.py
src/qwen3_embedding_service/: download_model.py  embedding_service.py  llm_service.py  main.py  start_embedding.py  start_llm.py
